# Bravo

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
cmake/: add_compiler_options.cmake
src/: application.cpp  application.hpp  botclient.cpp  botclient.hpp  main.cpp  pch.hpp  utils.cpp  utils.hpp
